# esp32s2-ulp-riscv-assembly

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  esp32s2-ulp-riscv-assembly-test.c  esp32s2-ulp-riscv-assembly.c
main/ulp/: add.S  main.c
